--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
